syntax ="proto3";
option go_package="GO_grpc/proto";

message UserRegistration {
  int32 user_id = 1;
  string first_name = 2;
  string last_name = 3;
  string occupation = 4;
  string email = 5;


}
message Book {
  int32 id = 1;
  string title = 2;
  int32 user_id = 3;
  int32 publication_year = 4;

}

service BookService {

  rpc GetBooksByUserId (UserIdRequest) returns (BookListResponse);
}

message UserIdRequest {
  int32 user_id = 1;
}

message BookListResponse {
  repeated Book books = 1;
}